# telathbot

./: .bumpversion.cfg  .env-local  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release-package.yml
scripts/: run_telathbot.py
telathbot/: __init__.py  app.py  config.py  constants.py  discord.py  enums.py  logger.py  main.py  public_ip.py
telathbot/databases/: mongo.py  mysql.py
telathbot/models/: __init__.py  appdata.py  metadata.py  reaction.py  requests.py  responses.py  safetytools.py
telathbot/models/validators/: __init__.py
telathbot/routers/: appdata.py  metadata.py  safetytools.py
telathbot/schemas/: __init__.py  metadata.py  reaction.py  requests.py  responses.py
telathbot/schemas/validators/: pyobjectid.py
tests/: test_appdata.py  test_discord.py  test_metadata.py  test_metrics.py  test_safetytools.py  test_utilities.py
tests/local_dev/: docker-compose.yaml  mariadb-init.sql  mongo-init.js
tests/unit/: test_dummy.py
