[tool.poetry]
name = "telathbot"
version = "0.1.0"
description = "A Discord/Xenforo bot!"
authors = ["Ivan Lee <ivanklee86@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
nextcord = "^2.0.0-alpha.6"
SQLAlchemy = "^1.4.29"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.931"
pylint = "^2.12.2"
pytest-cov = "^3.0.0"
pytest-flake8 = "^1.0.7"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.6.1"

[tool.mypy]
strict_optional = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts= """
    --cov UnleashClient \
    --cov-report term \
    --cov-report html:test_results/cov_html \
    --cov-report xml:test_results/cov.xml \
    --html=test_results/results.html \
    --self-contained-html \
    --junitxml=test_results/results.xml \
    --disable-warnings
"""
log_file_level="INFO"

[tool.pylint.messages_control]
disable = [
    "line-too-long"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
