[tool.poetry]
name = "telathbot"
version = "0.5.1"
description = "A Discord/Xenforo bot!"
authors = ["Ivan Lee <ivanklee86@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
discord-webhook = "^0.15.0"
uvicorn = "^0.17.0"
prometheus-fastapi-instrumentator = "^5.7.1"
motor = "^2.5.1"
aiomysql = "^0.0.22"
mypy = "^0.931"
httpx = "^0.27.0"
umongo = "^3.1.0"
python-dotenv = "^0.19.2"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
mypy = "^0.931"
pylint = "^2.12.2"
pytest-cov = "^3.0.0"
pytest-flake8 = "^1.0.7"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.6.1"
pytest-html = "^3.1.1"
black = "^21.12b0"
isort = "^5.10.1"
pytest-asyncio = "^0.18.0"
coveralls = "^3.3.1"
bump2version = "^1.0.1"

[tool.isort]
profile = "black"

[tool.mypy]
strict_optional = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts= """
    --cov telathbot \
    --cov-report term \
    --cov-report html:test_results/cov_html \
    --cov-report xml:test_results/cov.xml \
    --html=test_results/results.html \
    --self-contained-html \
    --junitxml=test_results/results.xml \
    --disable-warnings
"""
log_file_level="INFO"

[tool.pylint.messages_control]
disable = [
    "line-too-long",
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
    "logging-fstring-interpolation"
]
logging-format-style="new"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
